2002-10-27 Damien Sandras  <dsandras@seconix.com>

	* src/ils.cpp, src/druid.cpp: Fixed #96653.
	
2002-10-20 Damien Sandras  <dsandras@seconix.com>

	* src/gdkvideoio.cpp: Changed misplaced #endif.

	* src/endpoint.cpp: Added support for software codecs.
	
tag gm_0_94_1
	
2002-10-20 Damien Sandras  <dsandras@seconix.com>

	* configure.in: Changed PREREQ and SDL check version.
	
2002-10-20 Damien Sandras  <dsandras@seconix.com>

	* src/ldap_window.cpp, src/vfakeio.cpp: Fixed warnings.

	* src/sound_handling.cpp: Check that mixer != NULL.
	
2002-10-17 Damien Sandras  <dsandras@seconix.com>

	* src/ils.cpp: Reorganised GDK locks.
	
2002-10-17 Damien Sandras  <dsandras@seconix.com>

	* src/ils.cpp: Reorganised GDK locks.
	
2002-10-17 Damien Sandras  <dsandras@seconix.com>

	* src/endpoint.cpp: Changed gnomemeeting_threads_enter to a more
	useful place.

	* src/gnomemeeting.cpp: Do not try to add empty URLs to the history.

	* src/ils.cpp: Registering is now asynchronous.

	* src/misc.cpp: Added comments.
	
2002-10-17 Damien Sandras  <dsandras@seconix.com>

	* src/ils.cpp: Changed the way update works.
	
2002-10-17 Damien Sandras  <dsandras@seconix.com>

	* src/sound_handling.cpp: Changed "program" to NULL in 
	gnome_triggers_do.
	
2002-10-17 Damien Sandras  <dsandras@seconix.com>

	* src/ldap_window.cpp: Fixed leak.
	
2002-10-17 Damien Sandras  <dsandras@seconix.com>

	* src/ils.cpp: Fixed bug that made appear 200 popups when a modif on
	ILS fails.
	
2002-10-16 Damien Sandras  <dsandras@seconix.com>

	* src/ldap_window.cpp: Adds a @ in the callto URL if the user is 
	calling somebody from the ILS directory if he is registered to 
	a gatekeeper.
	
2002-10-15 Damien Sandras  <dsandras@seconix.com>

	* src/ils.cpp: The messages like "contacted ils server" and "updated
	info on ils server" are now displayed in the history, but not anymore
	in the statusbar for single updates as it prevents to see some other
	and more useful messages.
	