@@ -1,5 +1,9 @@
 2002-10-27 Damien Sandras  <dsandras@seconix.com>
 
+	* src/connection.cpp: Fixed #96652.
+	
+2002-10-27 Damien Sandras  <dsandras@seconix.com>
+
 	* src/ils.cpp, src/druid.cpp: Fixed #96653.
 	
 2002-10-20 Damien Sandras  <dsandras@seconix.com>
